# LLDFinder-ml

./: HRNet.py  pyproject.toml  report.docx  vitPosePlus.py  yolo11pose_s.py
dataset/: annotations.pkl
dataset/Fitted_femural_head/: data.yaml
dataset/Fitted_femural_head/test/labels/: 1135-right-Y-00000010.txt  1136-left-Y-00000010.txt  1137-right-M-00000010.txt  1138-left-M-00000010.txt  1139-right-Y-00000010.txt  1140-left-Y-00000010.txt  1141-right-M-00000010.txt  1142-left-M-00000010.txt  1143-left-Y-00000013.txt  1144-left-M-00000013.txt  1145-left-M-00000013.txt  1146-left-Y-00000013.txt  1147-right-Y-00000016.txt  1148-left-Y-00000016.txt  1149-right-M-00000016.txt  1150-left-M-00000016.txt  1151-right-M-00000016.txt  1152-left-M-00000016.txt  1153-right-Y-00000016.txt  1154-left-Y-00000016.txt  1155-right-Y-00000024.txt  1156-left-Y-00000024.txt  1157-right-M-00000024.txt  1158-left-M-00000024.txt  1159-right-Y-00000024.txt  1160-left-Y-00000024.txt  1161-right-M-00000024.txt  1162-left-M-00000024.txt  1163-right-Y-00000038.txt  1164-left-Y-00000038.txt  1165-right-M-00000038.txt  1166-left-M-00000038.txt  1167-right-Y-00000038.txt  1168-left-Y-00000038.txt  1169-right-M-00000038.txt  1170-left-M-00000038.txt  1171-right-Y-00000047.txt  1172-left-Y-00000047.txt  1173-right-M-00000047.txt  1174-left-M-00000047.txt  (+331 more)
dataset/Fitted_femural_head/train/labels/: 1-right-Y-00000006.txt  10-right-M-00000215.txt  100-right-Y-00000539.txt  1000-left-M-00000098.txt  1001-right-Y-00000366.txt  1002-left-Y-00000366.txt  1003-right-Y-00000087.txt  1004-left-Y-00000087.txt  1005-right-M-00000456.txt  1006-left-M-00000456.txt  1007-right-M-00000329.txt  1008-left-M-00000329.txt  1009-right-Y-00000207.txt  101-left-Y-00000539.txt  1010-left-Y-00000207.txt  1011-right-Y-00000464.txt  1012-left-Y-00000464.txt  1013-right-M-00000119.txt  1014-right-Y-00000020.txt  1015-left-Y-00000020.txt  1016-right-M-00000071.txt  1017-left-M-00000071.txt  1018-left-Y-00000107.txt  (+1001 more)
(+110 files in other folders)
