[project]
name = "targetvision"
version = "0.1.0"
description = "X-Ray Keypoint Detection using ViTPose and HRNet"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # PyTorch with CUDA support (install via pip with index-url for CUDA)
    # Note: For CUDA support, install torch separately:
    # pip install torch torchvision --index-url https://download.pytorch.org/whl/cu121
    # Deep Learning frameworks
    "timm>=0.9.0",
    "transformers>=4.35.0",

    # Image processing
    "Pillow>=10.0.0",

    # Data handling
    "numpy>=1.24.0",
    "pandas>=2.0.0",

    # Progress bars
    "tqdm>=4.65.0",

    # Hugging Face Hub (required by transformers)
    "huggingface-hub>=0.19.0",

    # Tokenizers (required by transformers)
    "tokenizers>=0.14.0",

    # SafeTensors (for model loading)
    "safetensors>=0.4.0",

    # Accelerate (optional but recommended for transformers)
    "accelerate>=0.24.0",

    # File handling
    "filelock>=3.12.0",

    # Requests (network operations)
    "requests>=2.31.0",

    # PyYAML (configuration files)
    "pyyaml>=6.0",

    # Typing extensions
    "typing-extensions>=4.8.0",

    # Regex (required by transformers)
    "regex>=2023.10.0",

    # Packaging
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
]

visualization = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "opencv-python>=4.8.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["targetvision"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
